<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 
            android:layout_width="fill_parent"
 
            android:layout_height="wrap_content" >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              
    >
        <TextView  
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:text="@string/hello"
            android:padding="10dp"
            android:textSize="20sp"
        />
        <TextView 
            android:layout_width="fill_parent" 
            android:id="@+id/dialog"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:textSize="20sp"
        />
         <TextView 
            android:layout_width="fill_parent" 
            android:id="@+id/log"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:textSize="20sp"
        />

        <!-- -->
        
        <TextView 
            android:layout_width="fill_parent" 
            
            android:layout_height="wrap_content"
            android:text="@string/ip"
            android:padding="10dp"
            android:textSize="20sp"
        />
    
        <EditText android:id="@+id/ip"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content" 
              android:hint="http://vench-master.spb.ru/dron/test.php"
              android:text="http://vench-master.spb.ru/dron/test.php"
              android:padding="10dp"/>
    
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mover1"
            android:textColor="#ffffff" 
            android:textSize="20sp" />
    
    
    
        <SeekBar
            android:id="@+id/mover1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="0"  
            android:onClick="overScrollModeMover"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mover2"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <SeekBar
            android:id="@+id/mover2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="0"  
            android:onClick="overScrollModeMover"
        />
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mover3"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <SeekBar
            android:id="@+id/mover3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="0"  
            android:onClick="overScrollModeMover"
        />
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mover4"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        <SeekBar
            android:id="@+id/mover4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="0"  
            android:onClick="overScrollModeMover"
        />


  
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_photo"                
            android:layout_margin="10dp" 
            android:onClick="onMakePhoto"
        />
        
    
    
    
    </LinearLayout>
</ScrollView>
